PR/45308: Manuel Bouyer: Update list of broadcast addresses after updating interfaces.